# zenjpeg

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  EXPERIMENTS.md  PROGRESS.md  RESEARCH.md  STREAMING_PLAN.md
docs/: AC_REFINE_BUG_FIX.md  ENCODER_SELECTION_STRATEGY.md
examples/: coefficient_compare.rs  color_debug.rs  corpus_reduction.rs  dc_debug.rs  debug_pixel_diff.rs  debug_quality.rs  debug_simple.rs  deringing_benchmark.rs  dqt_compare.rs  jpegli_compare.rs  pareto_benchmark.rs  pareto_butteraugli.rs  quality_check.rs  quality_match.rs  verify_decoders.rs
src/: adaptive_quant.rs  analysis.rs  color.rs  consts.rs  consts_moz.rs  dct.rs  deringing.rs  encode.rs  entropy.rs  error.rs  huffman.rs  lib.rs  progressive.rs  quant.rs  strategy.rs  trellis.rs  types.rs
src/jpegli/: adaptive_quant.rs  alloc.rs  bitstream.rs  color.rs  consts.rs  dct.rs  encode.rs  entropy.rs  error.rs  huffman.rs  huffman_opt.rs  icc.rs  mod.rs  quant.rs  scan_script.rs  simplified_quant.rs  tone_mapping.rs  transfer_functions.rs  types.rs  xyb.rs
tests/: aq_cpp_comparison.rs  aq_locked_tests.rs  cpp_subprocess_comparison.rs  deringing_comparison.rs  fast_benchmark.rs  quality_comparison.rs  quality_sweep.rs  roundtrip.rs  trellis_validation.rs
tests/common/: mod.rs
